<resources>
    <string name="app_name">mini SUAP</string>
    <string name="title_home">Início</string>
    <string name="title_about">Sobre</string>
    <string name="title_profile">Perfil</string>
    <string name="title_classes">Turmas</string>
    <string name="title_contacts">Contatos</string>

    <string name="description_about">
        \t\tO \"mini SUAP\" é uma versão minimalísta do Sistema Unificado de Administração Pública (SUAP).
        Tem por objetivo buscar informações básicas relacionadas a um aluno, a partir da sua matrícula e senha.
    </string>
    <string name="footer_title">made with ♥ by Victor Wagner</string>

    <string name="btn_enter">Entrar</string>
    <string name="btn_leave">Sair</string>
    <string name="hint_password">Senha</string>
    <string name="hint_registration">Matrícula</string>

    <string name="btn_add_contact">Adicionar contato</string>
    <string name="btn_back">Voltar</string>

    <string name="student_registration">Matrícula</string>
    <string name="student_name">Nome</string>
    <string name="student_course">Curso</string>
    <string name="student_campus">Campus</string>
    <string name="studant_status">Situação</string>

    <string name="title_suaplivre">suapnaofornece@suap.livre</string>
    <string name="title_add_contact">Adicionar contato</string>
    <string name="title_result">Resultado</string>
    <string name="btn_find">Procurar</string>
</resources>
