<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        style="@style/TextAppearance.AppCompat.Display2" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:labelFor="@id/tv_registration"
            android:text="@string/student_registration"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textAlignment="textEnd" />
        <TextView
            android:id="@+id/tv_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:labelFor="@id/tv_name"
            android:text="@string/student_name"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textAlignment="textEnd" />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:labelFor="@id/tv_course"
            android:text="@string/student_course"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textAlignment="textEnd" />
        <TextView
            android:id="@+id/tv_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:labelFor="@id/tv_campus"
            android:text="@string/student_campus"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textAlignment="textEnd" />
        <TextView
            android:id="@+id/tv_campus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:labelFor="@id/tv_status"
            android:text="@string/studant_status"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textAlignment="textEnd" />
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large" />

    </TableRow>

</TableLayout>